<resources>
    <string name="app_name">Didactickids</string>
    <string name="open_nav">Open Navegacion</string>
    <string name="close_nav">Close Navegation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciarSecion">Iniciar Sesion</string>
    <string name="NombreUsuario">Nombre_Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="noCuenta">¿No tienes cuenta?, Crear una</string>
    <string name="correo">Correo</string>
    <string name="crearCuenta">Crear cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="yaCuenta">Ya tengo cuenta</string>
    <string name="comenzar">Comenzar</string>
    <string name="suma">Sumas</string>
    <string name="resta">Restas</string>
    <string name="multiplicacion">Multiplicaciones</string>
    <string name="division">Divisiones</string>
    <string name="actividad">Actividad</string>
    <string name="num1">Numero 1</string>
    <string name="num2">Numero 2</string>
    <string name="resultado">Resultado</string>
    <string name="correctoin">Correcto Incorrecto</string>
</resources>