<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLecciones">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/sumas" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="80dp"
        android:text="@string/suma" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="210dp"
        android:text="@string/comenzar" />
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="250dp"
        android:src="@drawable/restas" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="300dp"
        android:text="@string/resta" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="210dp"
        android:text="@string/comenzar" />
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/multiplicaciones" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="45dp"
        android:text="@string/multiplicacion" />

    <Button
        android:id="@+id/btnMultiplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="460dp"
        android:text="@string/comenzar" />
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="250dp"
        android:src="@drawable/divisiones" />
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="300dp"
        android:text="@string/division" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="460dp"
        android:text="@string/comenzar" />

</RelativeLayout>