<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentActividadDivision">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="En un cine hay 540 butacas repartidas en 4 salas ¿Cuántas butacas hay en cada sala?"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/butacasdivision" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="250dp"
        android:src="@drawable/saladivision" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="180dp"
        android:src="@drawable/signodivision" />

    <EditText
        android:id="@+id/divnum1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/marco_login"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/num1"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:text="@string/num1" />

    <TextView
        android:id="@+id/tvresultadodivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="520dp"
        android:onClick="verificar"
        android:text="@string/resultado"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/divinum2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/marco_login"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="250dp"
        android:ems="10"
        android:hint="@string/num2"
        android:textAlignment="center"
        android:text="@string/num2" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="450dp"
        android:onClick="verificar"
        android:text="@string/resultado"
        android:textSize="18sp"
        app:cornerRadius="20dp" />
</FrameLayout>